// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The Cat Api integration tests > should fetch analysis of cat image by id  1`] = `
[
  {
    "created_at": "2018-11-25T10:50:17.000Z",
    "image_id": "dkn",
    "labels": [
      {
        "Confidence": 93.86238861083984,
        "Name": "Cat",
      },
      {
        "Confidence": 93.86238861083984,
        "Name": "Pet",
      },
      {
        "Confidence": 93.86238861083984,
        "Name": "Mammal",
      },
      {
        "Confidence": 93.86238861083984,
        "Name": "Animal",
      },
      {
        "Confidence": 89.74740600585938,
        "Name": "Person",
      },
      {
        "Confidence": 82.669189453125,
        "Name": "Plant",
      },
      {
        "Confidence": 82.57384490966797,
        "Name": "Manx",
      },
      {
        "Confidence": 77.03956604003906,
        "Name": "Clothing",
      },
      {
        "Confidence": 76.33657836914062,
        "Name": "Strap",
      },
      {
        "Confidence": 60.897979736328125,
        "Name": "Flower",
      },
    ],
    "moderation_labels": [],
    "vendor": "AWS Rekognition",
  },
]
`;

exports[`The Cat Api integration tests > should fetch cat image by id 1`] = `
{
  "height": 337,
  "id": "dkn",
  "url": "https://cdn2.thecatapi.com/images/dkn.jpg",
  "width": 500,
}
`;

exports[`The Cat Api integration tests > should fetch random cat image 1`] = `
[
  {
    "breeds": [],
    "height": 337,
    "id": "dkn",
    "url": "https://cdn2.thecatapi.com/images/dkn.jpg",
    "width": 500,
  },
]
`;

exports[`The Cat Api integration tests > should fetch uploaded breeds 1`] = `
[
  {
    "adaptability": 5,
    "affection_level": 5,
    "alt_names": "",
    "cfa_url": "http://cfa.org/Breeds/BreedsAB/Abyssinian.aspx",
    "child_friendly": 3,
    "country_code": "EG",
    "country_codes": "EG",
    "description": "The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals.",
    "dog_friendly": 4,
    "energy_level": 5,
    "experimental": 0,
    "grooming": 1,
    "hairless": 0,
    "health_issues": 2,
    "hypoallergenic": 0,
    "id": "abys",
    "indoor": 0,
    "intelligence": 5,
    "lap": 1,
    "life_span": "14 - 15",
    "name": "Abyssinian",
    "natural": 1,
    "origin": "Egypt",
    "rare": 0,
    "reference_image_id": "0XYvRd7oD",
    "rex": 0,
    "shedding_level": 2,
    "short_legs": 0,
    "social_needs": 5,
    "stranger_friendly": 5,
    "suppressed_tail": 0,
    "temperament": "Active, Energetic, Independent, Intelligent, Gentle",
    "vcahospitals_url": "https://vcahospitals.com/know-your-pet/cat-breeds/abyssinian",
    "vetstreet_url": "http://www.vetstreet.com/cats/abyssinian",
    "vocalisation": 1,
    "weight": {
      "imperial": "7  -  10",
      "metric": "3 - 5",
    },
    "wikipedia_url": "https://en.wikipedia.org/wiki/Abyssinian_(cat)",
  },
  {
    "adaptability": 5,
    "affection_level": 4,
    "alt_names": "",
    "child_friendly": 4,
    "country_code": "GR",
    "country_codes": "GR",
    "description": "Native to the Greek islands known as the Cyclades in the Aegean Sea, these are natural cats, meaning they developed without humans getting involved in their breeding. As a breed, Aegean Cats are rare, although they are numerous on their home islands. They are generally friendly toward people and can be excellent cats for families with children.",
    "dog_friendly": 4,
    "energy_level": 3,
    "experimental": 0,
    "grooming": 3,
    "hairless": 0,
    "health_issues": 1,
    "hypoallergenic": 0,
    "id": "aege",
    "indoor": 0,
    "intelligence": 3,
    "life_span": "9 - 12",
    "name": "Aegean",
    "natural": 0,
    "origin": "Greece",
    "rare": 0,
    "reference_image_id": "ozEvzdVM-",
    "rex": 0,
    "shedding_level": 3,
    "short_legs": 0,
    "social_needs": 4,
    "stranger_friendly": 4,
    "suppressed_tail": 0,
    "temperament": "Affectionate, Social, Intelligent, Playful, Active",
    "vetstreet_url": "http://www.vetstreet.com/cats/aegean-cat",
    "vocalisation": 3,
    "weight": {
      "imperial": "7 - 10",
      "metric": "3 - 5",
    },
    "wikipedia_url": "https://en.wikipedia.org/wiki/Aegean_cat",
  },
]
`;

exports[`The Cat Api integration tests > should fetch uploaded cat images 1`] = `
[
  {
    "breed_ids": null,
    "breeds": [],
    "created_at": "2025-11-14T21:08:34.000Z",
    "height": 3560,
    "id": "C5xoZtric",
    "original_filename": "pexels-cat.jpg",
    "sub_id": "sub_id",
    "url": "https://cdn2.thecatapi.com/images/C5xoZtric.jpg",
    "width": 5360,
  },
]
`;

exports[`The Cat Api integration tests > should fetch uploaded image by id 1`] = `
{
  "breeds": [
    {
      "adaptability": 5,
      "affection_level": 5,
      "alt_names": "",
      "cfa_url": "http://cfa.org/Breeds/BreedsAB/Abyssinian.aspx",
      "child_friendly": 3,
      "country_code": "EG",
      "country_codes": "EG",
      "description": "The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals.",
      "dog_friendly": 4,
      "energy_level": 5,
      "experimental": 0,
      "grooming": 1,
      "hairless": 0,
      "health_issues": 2,
      "hypoallergenic": 0,
      "id": "abys",
      "indoor": 0,
      "intelligence": 5,
      "lap": 1,
      "life_span": "14 - 15",
      "name": "Abyssinian",
      "natural": 1,
      "origin": "Egypt",
      "rare": 0,
      "reference_image_id": "0XYvRd7oD",
      "rex": 0,
      "shedding_level": 2,
      "short_legs": 0,
      "social_needs": 5,
      "stranger_friendly": 5,
      "suppressed_tail": 0,
      "temperament": "Active, Energetic, Independent, Intelligent, Gentle",
      "vcahospitals_url": "https://vcahospitals.com/know-your-pet/cat-breeds/abyssinian",
      "vetstreet_url": "http://www.vetstreet.com/cats/abyssinian",
      "vocalisation": 1,
      "weight": {
        "imperial": "7  -  10",
        "metric": "3 - 5",
      },
      "wikipedia_url": "https://en.wikipedia.org/wiki/Abyssinian_(cat)",
    },
    {
      "adaptability": 5,
      "affection_level": 4,
      "alt_names": "",
      "child_friendly": 4,
      "country_code": "GR",
      "country_codes": "GR",
      "description": "Native to the Greek islands known as the Cyclades in the Aegean Sea, these are natural cats, meaning they developed without humans getting involved in their breeding. As a breed, Aegean Cats are rare, although they are numerous on their home islands. They are generally friendly toward people and can be excellent cats for families with children.",
      "dog_friendly": 4,
      "energy_level": 3,
      "experimental": 0,
      "grooming": 3,
      "hairless": 0,
      "health_issues": 1,
      "hypoallergenic": 0,
      "id": "aege",
      "indoor": 0,
      "intelligence": 3,
      "life_span": "9 - 12",
      "name": "Aegean",
      "natural": 0,
      "origin": "Greece",
      "rare": 0,
      "reference_image_id": "ozEvzdVM-",
      "rex": 0,
      "shedding_level": 3,
      "short_legs": 0,
      "social_needs": 4,
      "stranger_friendly": 4,
      "suppressed_tail": 0,
      "temperament": "Affectionate, Social, Intelligent, Playful, Active",
      "vetstreet_url": "http://www.vetstreet.com/cats/aegean-cat",
      "vocalisation": 3,
      "weight": {
        "imperial": "7 - 10",
        "metric": "3 - 5",
      },
      "wikipedia_url": "https://en.wikipedia.org/wiki/Aegean_cat",
    },
  ],
  "height": 3560,
  "id": "C5xoZtric",
  "sub_id": "sub_id",
  "url": "https://cdn2.thecatapi.com/images/C5xoZtric.jpg",
  "width": 5360,
}
`;

exports[`The Cat Api integration tests > should upload cat image 1`] = `
{
  "approved": 1,
  "height": 3560,
  "id": "C5xoZtric",
  "original_filename": "pexels-cat.jpg",
  "pending": 0,
  "sub_id": "sub_id",
  "url": "https://cdn2.thecatapi.com/images/C5xoZtric.jpg",
  "width": 5360,
}
`;
